<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/text_margin"
    android:background="@android:color/black"
    tools:context="example.com.sampleapptab.settings.SettingsFragment">

    <TextView
        android:id="@+id/textView"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_settings" />

    <TextView
        android:id="@+id/textView3"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:text="@string/add_or_modify_server_settings" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/about_app" />
</RelativeLayout>
