<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/text_margin"
    android:background="@android:color/black"
    tools:context="example.com.sampleapptab.settings.SettingsFragment">

    <TextView
        android:id="@+id/serverNameTV"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_name" />

    <TextView
        android:id="@+id/profileNameTV"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/serverNameTV"
        />

    <TextView
        android:id="@+id/urlTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:layout_below="@+id/profileNameTV"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/about_app" />

    <TextView
        android:id="@+id/urlTV"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/urlTitleTV"
        />

    <TextView
        android:id="@+id/otherSettingsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:layout_below="@+id/urlTV"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/other_settings" />
</RelativeLayout>
